objects/ASI_GiftBox_Transfer_Log__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GiftBox_Master__c</fullName>
        <label>Gift Box Master</label>
        <referenceTo>ASI_GiftBox_Inventory_Master__c</referenceTo>
        <relationshipLabel>Gift Box Transfer Log</relationshipLabel>
        <relationshipName>ASI_GiftBox_Transfer_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Remarks__c</fullName>
        <label>Remarks</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Transfer_From__c</fullName>
        <label>Transfer From (Warehouse)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VTS</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>HN</fullName>
                </value>
                <value>
                    <fullName>DN</fullName>
                </value>
                <value>
                    <fullName>K12</fullName>
                </value>
                <value>
                    <fullName>Intransit</fullName>
                </value>
                <value>
                    <fullName>Supplier Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Transfer_To__c</fullName>
        <label>Transfer To (Warehouse)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VTS</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>HN</fullName>
                </value>
                <value>
                    <fullName>DN</fullName>
                </value>
                <value>
                    <fullName>K12</fullName>
                </value>
                <value>
                    <fullName>Intransit</fullName>
                </value>
                <value>
                    <fullName>Supplier Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Gift Box Transfer Log</label>
    <nameField>
        <displayFormat>GBT-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Box Transfer Log</pluralLabel>
    <recordTypes>
        <fullName>ASI_GiftBox_VN_Transfer_Log</fullName>
        <active>true</active>
        <label>ASI GiftBox VN Transfer Log</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_GiftBox_VN_LockConfirmedTransfer</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
	CONTAINS(RecordType.DeveloperName, &quot;ASI_GiftBox_VN&quot;),
	ISPICKVAL(PRIORVALUE(ASI_GiftBox_Status__c),&quot;Confirmed&quot;),
	OR (
		ISCHANGED(ASI_GiftBox_Quantity__c), 
		ISCHANGED(ASI_GiftBox_Status__c),
		ISCHANGED(ASI_GiftBox_Transfer_From__c),
		ISCHANGED(ASI_GiftBox_Transfer_To__c)
	)
)</errorConditionFormula>
        <errorMessage>You cannot update a confirmed transfer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_GiftBox_VN_TransfeQuantityValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_GiftBox_VN&quot;),
 ASI_GiftBox_Quantity__c &lt;= 0
)</errorConditionFormula>
        <errorDisplayField>ASI_GiftBox_Quantity__c</errorDisplayField>
        <errorMessage>Transfer Quantity must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_GiftBox_VN_WarehouseValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_GiftBox_VN&quot;),
   TEXT(ASI_GiftBox_Transfer_From__c ) =   TEXT(ASI_GiftBox_Transfer_To__c) 
)</errorConditionFormula>
        <errorMessage>Cannot transfer from and to the same warehouse</errorMessage>
    </validationRules>
</CustomObject>